# talk-to-data-slackbot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  PROJECT_CONTEXT.md  README.md  docker-compose.yml  pyproject.toml
design/: SUMMARY.md  agent_design.excalidraw
talk_to_data_slackbot/: handler.py  llm.py  main.py  pipeline.py
talk_to_data_slackbot/engine/: __init__.py  agent.py
talk_to_data_slackbot/input/: __init__.py  guardrails.py  slack_handler.py
talk_to_data_slackbot/memory/: __init__.py
talk_to_data_slackbot/orchestrator/: __init__.py  handler.py
talk_to_data_slackbot/output/: __init__.py  guardrails.py  slack_formatter.py  slack_poster.py
talk_to_data_slackbot/semantic_layer/: __init__.py  db_connection.py
tests/: test_engine_agent.py  test_input_guardrails.py  test_input_slack_handler.py  test_llm.py  test_main.py  test_orchestrator_handler.py  test_orchestrator_pipeline.py  test_output_guardrails.py  test_output_slack_formatter.py  test_output_slack_poster.py  test_semantic_layer_db_connection.py
