[project]
name = "talk-to-data-slackbot"
version = "0.1.0"
description = "An AI agent for text queries on Slack."
authors = [
    {name = "Guilherme Bracco",email = "102906034+guibracco@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11<3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
